ai-ml/cici-face/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cici-face
  namespace: ai-ml
  labels:
    app: cici-face
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cici-face
  template:
    metadata:
      labels:
        app: cici-face
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8501"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: cici-face
        image: 192.168.50.2:5050/ai-ml/cici/face:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
      imagePullSecrets:
      - name: gitlab-registry
