ai-ml/cici-face/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cici-face
  namespace: ai-ml
  labels:
    app: cici-face
spec:
  type: NodePort
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30210
  selector:
    app: cici-face
